objects/noduplicates__Duplicate__c.object
<CustomObject>
    <fields>
        <fullName>noduplicates__Dupes_Amount__c</fullName>
        <label>Dupes Amount</label>
        <summaryForeignKey>noduplicates__Duplicate_Pair__c.noduplicates__Duplicate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>noduplicates__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>noduplicates__Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noduplicates__Matching_Rule__c</fullName>
        <label>Matching Rule</label>
        <referenceTo>noduplicates__Matching_Rule__c</referenceTo>
        <relationshipLabel>Duplicates</relationshipLabel>
        <relationshipName>Duplicates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>noduplicates__Object_Id__c</fullName>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Duplicate</label>
    <listViews>
        <fullName>noduplicates__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>Duplicate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>